# nexus-agent-app-lcbtbc

./: .gitignore  NEXUS_AGENT_ANDROID_README.md  README.md  app.json  eas.json  electron-builder.json  electron-main.js  nexus-bootloader-unlock-debug.apk  nexus-bootloader-unlock-v2.apk  nexus-bootloader-unlock-v2.apk.idsig  nexus-bootloader-unlock-v3.apk  nexus-bootloader-unlock-v3.apk.idsig  package.json
.github/workflows/: build-apk.yml  build-bootloader-unlock-apk.yml  build-windows.yml
ai-llm-hub/: README.md  requirements.txt  setup.sh
ai-llm-hub/capabilities/: README.md  benchmarks.md
ai-llm-hub/config/: .env.example  models.yaml
ai-llm-hub/implementation/: chat_llm.py  coding_llm.py  local_ollama.py  rag_pipeline.py  tool_use.py  unified_client.py
ai-llm-hub/models/: README.md
android-bootloader-unlock/: .gitignore  build.gradle  settings.gradle
android-bootloader-unlock/app/: build.gradle
android-webview/: settings.gradle
android-webview/app/: build.gradle
app/: _layout.tsx  auth-screen.tsx  custom-apis.tsx  github.tsx  logs.tsx  notification-preferences.tsx  permissions.tsx  providers.tsx
app/(tabs)/: _layout.ios.tsx  _layout.tsx  memory.tsx  new-task.tsx  settings.tsx  tasks.tsx
app/custom-api/: [id].tsx
app/memory/: [id].tsx
app/settings/: api-keys.tsx  custom-apis.tsx  github.tsx  logs.tsx  permissions.tsx  runtime.tsx  safety.tsx
app/task/: [id].tsx
backend/: .env.example  package-lock.json  package.json  tsconfig.tsbuildinfo
backend/drizzle/: 20260609023617_dapper_tiger_shark.sql  20260609024218_late_rocket_racer.sql
backend/src/: index.ts
backend/tests/: integration.test.ts
components/: AnimatedPressable.tsx  BodyScrollView.tsx  EmptyState.tsx  NotificationBell.tsx  PermissionToggle.tsx  StatusBadge.tsx  StepRow.tsx
constants/: theme.ts
contexts/: AuthContext.tsx
lib/: auth.ts
libraries/: .gitmodules  README.md  setup.sh
libraries/ai-ml/: README.md  (+1 more)
libraries/cpp/: CMakeLists.txt  README.md
libraries/rust/: Cargo.toml  README.md
nexus-model/: README.md  finetune.py  merge_config.yaml  merge_model.py  model.py  requirements.txt  serve.py  setup.sh  upload_hf.py
store/: README.md  app-info.md  app-privacy-ios.md  data-safety.md  description-long.md  keywords.md  privacy-policy.md  review-notes.md  support.md  terms-of-service.md  whats-new.md
unlock-service/: .env.example  SETUP.md  package.json  tailwind.config.ts
utils/: api.ts  stripDevProps.ts
(+118 files in other folders)
